# BoogPP

./: .gitignore  BRANCHES.md  CHANGELOG.md  INSTALL.md  LICENSE  MANIFEST.in  Makefile  PACKAGE_SETUP.md  PROJECT_SUMMARY.md  README.md  README_OLD.md  SETUP-WINDOWS-README.md  SETUP.md  SETUP_QUICK.md  boog.bpp  pyproject.toml  requirements.txt  setup-python-only.bat  setup-windows.bat  setup-windows.ps1  setup.ps1
.github/workflows/: build-and-test.yml
boogpp/: .gitignore  Makefile.stdlib  README.md  __init__.py  __main__.py  test_compiler.py  test_phase2.py
boogpp/compiler/: __init__.py  cli.py  main.py
boogpp/compiler/codegen/: __init__.py  llvm_codegen.py
boogpp/compiler/lexer/: __init__.py  lexer.py  tokens.py
boogpp/compiler/parser/: __init__.py  ast_nodes.py  parser.py
boogpp/compiler/safety/: __init__.py  enhanced_checker.py  safety_checker.py  safety_rules.py
boogpp/compiler/typechecker/: __init__.py  type_checker.py  type_system.py
boogpp/docs/: LANGUAGE_SPEC.md
boogpp/examples/: 01_hello_world.bpp  01_hello_world.ll  02_registry_reader.bpp  03_process_monitor.bpp  04_system_service.bpp  05_file_system_guard.bpp  06_network_monitor.bpp  07_registry_guard.bpp  08_advanced_resilience.bpp
boogpp/runtime/: README.md
boogpp/runtime/include/: boogpp_runtime.h
boogpp/runtime/src/: boogpp_runtime.c
boogpp/runtime/tests/: test_runtime.c
boogpp/stdlib/windows/: README.md
boogpp/stdlib/windows/src/: boogpp_windows.c
compiler/: __init__.py  cli.py
customos/: README.md  debug_literals.py  test_compiler.py  test_phase2.py
customos/compiler/: __init__.py  cli.py
customos/compiler/codegen/: __init__.py  llvm_codegen.py
customos/compiler/lexer/: __init__.py  lexer.py  tokens.py
customos/compiler/parser/: __init__.py  ast_nodes.py  parser.py
customos/compiler/safety/: __init__.py  enhanced_checker.py  safety_checker.py  safety_rules.py
customos/compiler/typechecker/: __init__.py  type_checker.py  type_system.py
customos/docs/: LANGUAGE_SPEC.md
customos/examples/: 01_hello_world.cos  02_registry_reader.cos  03_process_monitor.cos  04_system_service.cos  05_file_system_guard.cos  06_network_monitor.cos  07_registry_guard.cos  08_advanced_resilience.cos
customos/stdlib/windows/: README.md
docs/: API_REFERENCE.md  PHASE3_RUNTIME.md
examples/: 01_hello_world.bpp  02_registry_reader.bpp  03_process_monitor.bpp  04_system_service.bpp  05_file_system_guard.bpp  06_network_monitor.bpp  07_registry_guard.bpp  08_advanced_resilience.bpp
examples/advanced/: kernel_driver.bpp  pe_patcher.bpp  process_injector.bpp  registry_editor.bpp  windows_service.bpp
runtime/: Makefile
scripts/: README.md  build_windows.ps1  fix_llvmlite_windows.ps1  install_llvm.ps1  install_windows.ps1
stdlib/windows/include/: boogpp_windows.h  boogpp_windows_advanced.h
stdlib/windows/src/: boogpp_windows_advanced.c
tests/: debug_literals.py
tests/integration/: test_pe_manipulation.py
