[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "boogpp"
version = "3.0.0"
description = "A Windows-centric systems programming language combining Python-like syntax with C++ performance"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Boogpp Development Team"}
]
keywords = [
    "compiler",
    "programming-language",
    "windows",
    "systems-programming",
    "llvm",
    "safety",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Code Generators",
]

dependencies = [
    "colorama>=0.4.6",
    "rich>=13.7.0",
    "llvmlite>=0.43.0",
    "pyyaml>=6.0.1",
    "click>=8.1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pylint>=2.15.0",
    "black>=22.0.0",
    "mypy>=0.990",
    "isort>=5.10.0",
]

[project.urls]
Homepage = "https://github.com/versix1337/BoogPP"
Documentation = "https://github.com/versix1337/BoogPP/tree/main/docs"
Repository = "https://github.com/versix1337/BoogPP"
"Bug Tracker" = "https://github.com/versix1337/BoogPP/issues"

[project.scripts]
boogpp = "boogpp.compiler.cli:main"

[tool.setuptools]
# Automatically discover all packages under boogpp/
packages = {find = {where = ["."], include = ["boogpp*"]}}

[tool.setuptools.package-data]
# Package data files are now in the repo root, not inside boogpp/
# So we use MANIFEST.in instead for non-Python files

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=boogpp --cov-report=term-missing"
